# ThrowbackLauncher

./: .gitignore  LICENSE  README.md  launcher.spec  loader.spec  manifest.toml  run.sh  throwback-launcher.desktop
.github/workflows/: release.yml
app/: app_window.py  loader.py  main.py  requirements.txt  server.py
app/bridge/: downloader.py  forward.py  info.py  launch.py  liberator.py  library.py  platform.py  radmin.py  reporter.py  settings.py  shears.py  uninstall.py  update.py
app/core/: bridge_runtime.py  config.py  constants.py  depot.py  heatedmetal.py  manifest.py  radmin.py  reporter.py  rpc.py  self_uninstall.py  self_update.py  shears.py  spinner.py  steam.py  style.py  throwbackloader.py  update.py  winspawn.py
installer/: loader.py
liberator/: Cargo.toml  build.sh
liberator/src/: buildscan.rs  descramble.rs  lib.rs  mapbuild.rs  memread.rs  mockmem.rs  scanrip.rs  win.rs
liberator/test/: dummy_build.c  mock_client.py  test-daemon-rs.sh  verify-rs.sh
web/: .gitignore  .prettierignore  eslint.config.mjs  package.json  pnpm-lock.yaml
web/public/: bridge-init.js
web/public/cheat-tables/: y3s1-chimera.ct  y5s3-shadowlegacy.ct
web/public/media/: antivirus-exclusion.webm  game-folder.webm
web/scripts/: gen-splash.mjs
web/src/app/: fonts.ts  globals.css  layout.tsx  page.tsx
web/src/components/: AddToSteam.tsx  AppShell.tsx  BackHeading.tsx  Badge.tsx  Button.tsx  Callout.tsx  ConfirmModal.tsx  ContentImage.tsx  ContentVideo.tsx  CreditsGrid.tsx  Dialog.tsx  DiscordIcon.tsx  DownloadView.tsx  DownloaderButton.tsx  ExternalLink.tsx  (+33 more)
(+43 files in other folders)
