[package]
name = "liberator"
version = "0.1.0"
edition = "2021"

[lib]
name = "liberator"
path = "src/lib.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "liberator"
path = "src/bin/daemon.rs"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Networking_WinSock",
    "Win32_Globalization",
    "Win32_System_SystemInformation",
]

[profile.release]
opt-level = 2
panic = "abort"
